# ROS_face_classification

./: .gitignore  CMakeLists.txt  package.xml  setup.py
face_classification/: CMakeLists.txt
face_classification/launch/: emotion_classification.launch
face_classification/nodes/: emotion_classification.py
face_classification/src/face_classification/: face_detector.py
launch/: emotion_classification.launch  gender_classification.launch
nodes/: emotion_classification.py  gender_classification.py  gender_classification_old.py  gender_classification_working.py
src/face_classification/: emotion_classifier.py  gender_classifier.py  utils.py
trained_models/: gender_classifier.hdf5
