<?xml version="1.0"?>
<package>
  <name>face_classification</name>
  <version>0.0.0</version>
  <description>Classify gender and emotion using CNN</description>

  <maintainer email="octavio.arriaga@smail.inf.h-brs.de">octavio</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mcr_perception_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>mcr_perception_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>roscpp</run_depend>

</package>
